--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,6 @@
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
         <exec.mainClass>com.mycompany.proyectiocuborubick.ProyectioCuboRubick</exec.mainClass>
+	<!--<p>Created by: leonxjass</p>-->
     </properties>
 </project>
